Styled my webpage

--- a/index.html
+++ b/index.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Shop</title>
+    <link href="index.css" rel="stylesheet" />
 </head>
+
 <body>
-<header>
-    <h2>Movie Shop</h2>
-</header>
+    <header>
+        <h1>Movie Shop</h1>
+    </header>
 
-<main>
+    <main>
 
-    <div>
-<img src="images/movie2.jpg" width="200"/>
-<h3>Spiderman</h3>
-<p>Spiderman is a friendly neighbourhood spider who protects people and his neighbourhood from danger. </p>
-<a href="spiderman.html"> Play Movie</a>
-    </div>
-</main>
-<main>
+        <div>
+            <img src="images/movie2.jpg" width="200" />
+            <h3>Spiderman</h3>
+            <p>Spiderman is a friendly neighbourhood spider who protects people and his neighbourhood from danger. </p>
+            <a href="spiderman.html"> Play Movie</a>
+        </div>
+   
+
+        <div>
+            <img src="images/movie4.jpg" width="200" />
+            <h3>Deathpool</h3>
+            <p>Wade Wilson Deadpool. Ever-quipping mercenary Wade Wilson's healing factor—and big mouth—make him one of
+                the most relentlessly wisecracking heroes in the universe. </p>
+            <a href="deathpool.html">Play Movie</a>
+        </div>
     
-    <div>
-<img src="images/movie4.jpg" width="200"/>
-<h3>Deathpool</h3>
-<p>Wade Wilson Deadpool. Ever-quipping mercenary Wade Wilson's healing factor—and big mouth—make him one of the most relentlessly wisecracking heroes in the universe. </p>
-<a href="deathpool.html">Play Movie</a>
-    </div>
-</main>
-<main>
 
-    <div>
-<img src="images/movie3.jpg" width="200"/>
-<h3>Doctor Strange</h3>
-<p> Doctor Strange.On Screen Powers, Enemies ... A Master of the Mystic Arts, Doctor Strange has phenomenally powerful magical abilities that enable him to skillfully conjure spells. </p>
-<a href="doctorstrange.html">Play Movie</a>
-    </div>
-</main>
-<main>
-    <div>
-<img src="images/movie1.jpg" width="200"/>
-<h3>Groot</h3>
-<p>Groot's abilities are all-natural and stem from the dendronic wood that makes up his entire body.</p>
-<a href="groot.html">Play Movie</a>
-    </div>
-</main>
+        <div>
+            <img src="images/movie3.jpg" width="200" />
+            <h3>Doctor Strange</h3>
+            <p> Doctor Strange.On Screen Powers, Enemies ... A Master of the Mystic Arts, Doctor Strange has
+                phenomenally powerful magical abilities that enable him to skillfully conjure spells. </p>
+            <a href="doctorstrange.html">Play Movie</a>
+        </div>
+    
+        <div>
+            <img src="images/movie1.jpg" width="200" />
+            <h3>Groot</h3>
+            <p>Groot's abilities are all-natural and stem from the dendronic wood that makes up his entire body.</p>
+            <a href="groot.html">Play Movie</a>
+        </div>
+    </main>
 </body>
+
 </html>
